--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^0.24.0",
+    "gray-matter": "^4.0.3",
     "next": "12.0.4",
     "next-images": "^1.8.4",
     "react": "17.0.2",
@@ -15,9 +18,12 @@
     "sass": "^1.44.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.0",
+    "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "antd": "^4.17.3",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.4"
   }
 }
