--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/axios": "^0.14.0",
     "axios": "^0.24.0",
     "gray-matter": "^4.0.3",
+    "marked": "^4.0.8",
     "next": "12.0.4",
     "next-images": "^1.8.4",
     "react": "17.0.2",
@@ -18,12 +19,15 @@
     "sass": "^1.44.0"
   },
   "devDependencies": {
+    "@types/marked": "^4.0.1",
     "@types/node": "^17.0.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/ua-parser-js": "^0.7.36",
     "antd": "^4.17.3",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "ua-parser-js": "^1.0.2"
   }
 }
